# bazel8-java-cpp-dual-fixed-pinned

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
cpp_app/: BUILD.bazel  hello.cc
java_app/: BUILD.bazel  testng.xml
java_app/src/main/java/com/example/: App.java
java_app/src/test/java/com/example/: AppTest.java
